Convert inline CSS to external.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,15 @@
+body {
+  background-color: #EAF6F6;
+}
 
-  body {
-    background-color: #F4DFD0;
-  }
+hr {
+  background-color: white;
+  border-style: dotted none none none;
+  border-width: 10px;
+  border-color: grey;
+  width: 20%;
+}
 
-  hr {
-    background-color: white;
-    border-style: dotted none none none;
-    border-width: 10px;
-    border-color: grey;
-    width: 20%;
-  }
+h1, h3 {
+  color: #66BFBF;
+}
