--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,30 @@
+
 body {
   background-color: #EAF6F6;
 }
 
 hr {
-  background-color: white;
+  background-color: none;
   border-style: dotted none none none;
-  border-width: 10px;
+  border-width: 15px;
   border-color: grey;
-  width: 20%;
+  width: 100%;
+  padding-top: 20px;
 }
 
-h1, h3 {
-  color: #66BFBF;
+h1, h2, h3 {
+  font-family: 'Montserrat', sans-serif;
+  color: black;
+}
+
+p, td, li, thead{
+  font-family: 'Work Sans', sans-serif;
+}
+
+.font2 {
+  font-family: 'Work Sans', sans-serif;
+}
+
+.cropping {
+  border-radius: 25%;
 }
